--- a/intro.tex
+++ b/intro.tex
@@ -3,15 +3,15 @@ On such systems, performance will heavily depend on the efficient utilization of
 To handle the performance portability challenge, the programmer must perform different sets of potential optimizations on the same compute kernel for different architectures.
 This problem is challenging especially for domain programmers, given that they must also optimize the communication among multiple accelerators of the same compute node as well as across nodes.
 
-This paper presents a solution that allows the programmer to explore effective optimizations for an application on a given hardware without aggresive modifications to the source code. 
+This paper presents a solution that allows the programmer to explore effective optimizations for an application on a given hardware without aggressive modifications to the source code. 
 Specifically, we exploit task-based parallelism that can abstract away complicated hardware details associated with low-level accelerator architectures.
 We extend the programming interface of {\em Rambutan}~\cite{rambutanWebsite}, which provides an interface to construct a fine-grain, dynamic task dependency graph that unfolds as the program executes. 
 Tasks can execute as soon as their {\em true} data dependencies are satisfied, thus avoiding many types of over-synchronization (e.g. barrier, wait\_all, etc.) present in traditional programming models.
 
 Using our task-based code representation, the programmer can evaluate the impact of various optimizations by playing with the scheduling and communication handling policies.
-Although many runtime systems have been developed~\cite{legion,physics,mpiacc,mvapich2gpu} for scheduling tasks of a graph, current support for state-of-the-art accelerators is very limited.
-There remain significant challenges, such as fine-grained scheduling mechanisms, dynamic load balancing, and direct communication among accelerators.
-To address these challenges, we develop {\em RambutanAcc}, a task-based runtime that can scheduler task on multiple hardware levels, ranging from accelerator cores to compute nodes of a distributed-memory system.
+Although many runtime systems have been developed for scheduling tasks of a graph ~\cite{legion,physics,mpiacc,mvapich2gpu}, current support for state-of-the-art accelerators is very limited.
+There remain significant challenges, such as fine-grained scheduling, dynamic load balancing, and direct communication among accelerators.
+To address these challenges, we develop {\em RambutanAcc}, a task-based runtime that can schedule task on multiple hardware levels, ranging from accelerator cores to compute nodes of a distributed-memory system.
 Each fine-grain task can be scheduled to run on a {\em worker}, which can be either a group of CPU cores, an accelerator, or a group of accelerator cores.
 %\cyC{"group of accelerator cores" would be clearer than "a partition of an accelerator", which hasn't been defined yet}
 Our runtime handles the communication among tasks automatically -- in particular, data required by a task can be produced by other tasks running anywhere else on the system.
@@ -24,7 +24,7 @@ The runtime then transparently moves data to where the dependent task will execu
 {\em RambutanAcc} currently supports NVIDIA's GPUs and the first generation of Intel's Xeon Phi co-processor (KNC).
 In this paper, we present the GPU supported version as the GPU code (e.g. CUDA) is substantially different from conventional code running on the CPU.
 Our programming model removes the programming burden of launching CUDA kernels and moving data between the host and GPUs.
-Each task is specified as a conventional routine parallelized across a thread team.
+Each task can be specified as a conventional routine parallelized across a thread team.
 %In typical CUDA code, running multiple types of tasks requires launching multiple independent kernels, with little flexibility in when tasks of different types may be executed.
 %In contrast, 
 {\em RambutanAcc} can be configured to launch a single {\em persistent CUDA kernel} that can service multiple requests from a task scheduler running on the host, thus avoiding the overhead of multiple kernel launches during execution.
@@ -37,26 +37,24 @@ The handler can also move data directly among GPUs via direct memory access (DMA
 For off-node requests, {\em RambutanAcc} uses GASNet~\cite{Bonachea:2002:gasnet}, a one-sided communication library % , to implement the communication handler.
 that provides non-blocking data transfer and low-latency signaling mechanisms. % , allowing inter-process communication to be overlapped with computations efficiently.
 
-We use {\em RambutanAcc} to explore suitable set of optimizations for 4 HPC benchmarks: Sparse Cholesky Factorization, a Machine Learning-based face recognition code, Communication-Avoiding Cannon's Matrix Multiplication~\cite{25Dcannon}, and a 3D Stencil algorithm.
+We use {\em RambutanAcc} to explore suitable set of optimizations for 4 HPC benchmarks: sparse cholesky factorization, Viola-Jones face recognition, communication-avoiding Cannon's matrix multiplication~\cite{25Dcannon}, and a 3D stencil solver for Laplace's equation.
 %\samW{needs to be consistent with sec5... missing ML code}
 The results show that the performance improves significantly and meets the performance level of our painstakingly hand-optimized code variant.
 %{\em RambutanAcc} also hides communication costs that cannot be avoided.\samW{how is this different than the previous sentence?}
-In addition, for Sparse Cholesky Factorization, having multiple workers on a single GPUs allows compute throughput to be increased at low programming cost. 
+In addition, for sparse cholesky factorization, having multiple workers on a single GPUs allows compute throughput to be increased at low programming cost. 
 We hope this result will encourage further research to develop and tune sparse kernels for co-scheduling fine-grained tasks on GPUs.
 
-The contributions of the paper are four-fold.
+The contributions of the paper are three-fold.
 \begin{itemize}
-% \item A task scheduler that supports well fine-grained parallelism on GPUs without algorithmic change
-\item A programming model that supports task parallelism on GPUs without algorithmic change
-\item A task scheduler that schedules fine-grained tasks on GPU partitions with no kernel launch overhead
-\item A communication handler that hides various communication overheads at modest programming cost
-\item A study of communication overlap in the context of a communication avoiding technique
+\item A task-based programming model that can reveal a sinificant amount of dynamic parallelism in an application
+\item A runtime system that supports a rich set of task scheduling and communication handling policies for learning the impact of various optimizations on the performance
+\item A thorough experimental study using 4 HPC benchmarks 
 \end{itemize}
 
 The rest of this paper is organized as follows.
 Sec.~\ref{sec:motivation} presents the overview of a hybrid system, which is increasingly popular in practice.
 In Sec.~\ref{sec:model}, we present the programming model of {\em RambutanAcc}.
-Followed by this section is Sec.~\ref{sec:impl}, which discusses the implementation of the associated runtime system.
+Followed by this section is Sec.~\ref{sec:impl}, which discusses the implementation of the associated runtime.
 Sec.~\ref{sec:results} shows experimental results.
 Sec.~\ref{sec:related} presents related work.
 We conclude the paper in Sec.~\ref{sec:conclusion}.
