--- a/paper.tex
+++ b/paper.tex
@@ -83,7 +83,7 @@ Recently, heterogeneous architectures have gained traction in HPC. Systems with 
 \label{sec:intro}
 \input{intro}
 
-\section{Hybrid Node - a Notable Design Trend}
+\section{Heterogeneous Node - a Notable Design Trend}
 \label{sec:motivation}
 \input{motivation}
 
