--- a/motivation.tex
+++ b/motivation.tex
@@ -30,4 +30,4 @@ to manually manage data movement and locality.
 %\end{figure}
 
 
-In this paper, we focus on tackling challenges associated with the hybrid host-accelerator node design, though our solution can also support the homogeneous case.
+In this paper, we focus on tackling challenges associated with the hybrid CPU-GPUs node design, though our solution can also support the homogeneous case as well as being extended to support other accelerator architectures.
