--- a/ref.bib
+++ b/ref.bib
@@ -1,3 +1,57 @@
+@article{facedetection_dws,
+ author = {Nguyen, Tan and Hefenbrock, Daniel and Oberg, Jason and Kastner, Ryan and Baden, Scott},
+ title = {A Software-based Dynamic-warp Scheduling Approach for Load-balancing the Viola-Jones Face Detection Algorithm on GPUs},
+ journal = {J. Parallel Distrib. Comput.},
+ issue_date = {May, 2013},
+ volume = {73},
+ number = {5},
+ month = may,
+ year = {2013},
+ issn = {0743-7315},
+ pages = {677--685},
+ numpages = {9},
+ url = {http://dx.doi.org/10.1016/j.jpdc.2013.01.012},
+ doi = {10.1016/j.jpdc.2013.01.012},
+ acmid = {2486516},
+ publisher = {Academic Press, Inc.},
+ address = {Orlando, FL, USA},
+ keywords = {Dynamic warp scheduling, GPUs, SIMD, Viola-Jones},
+} 
+
+
+@INPROCEEDINGS{facedetection1, 
+author={P. Viola and M. Jones}, 
+booktitle={Proceedings of the 2001 IEEE Computer Society Conference on Computer Vision and Pattern Recognition. CVPR 2001}, 
+title={Rapid object detection using a boosted cascade of simple features}, 
+year={2001}, 
+volume={1}, 
+pages={I-511-I-518 vol.1}, 
+keywords={feature extraction;image classification;image representation;learning (artificial intelligence);object detection;AdaBoost;background regions;boosted simple feature cascade;classifiers;face detection;image processing;image representation;integral image;machine learning;object specific focus-of-attention mechanism;rapid object detection;real-time applications;statistical guarantees;visual object detection;Detectors;Face detection;Filters;Focusing;Image representation;Machine learning;Object detection;Pixel;Robustness;Skin}, 
+doi={10.1109/CVPR.2001.990517}, 
+ISSN={1063-6919}, 
+month={},}
+
+@article{facedetection2,
+ author = {Viola, Paul and Jones, Michael J.},
+ title = {Robust Real-Time Face Detection},
+ journal = {Int. J. Comput. Vision},
+ issue_date = {May 2004},
+ volume = {57},
+ number = {2},
+ month = may,
+ year = {2004},
+ issn = {0920-5691},
+ pages = {137--154},
+ numpages = {18},
+ url = {http://dx.doi.org/10.1023/B:VISI.0000013087.49260.fb},
+ doi = {10.1023/B:VISI.0000013087.49260.fb},
+ acmid = {966458},
+ publisher = {Kluwer Academic Publishers},
+ address = {Hingham, MA, USA},
+ keywords = {boosting, face detection, human sensing},
+} 
+
+
 @article{MAGMA,
   author={Emmanuel Agullo and Jim Demmel and Jack Dongarra and Bilel Hadri and Jakub Kurzak and Julien Langou and Hatem Ltaief and Piotr Luszczek and Stanimire Tomov},
   title={Numerical linear algebra on emerging architectures: The PLASMA and MAGMA projects},
