--- a/results.tex
+++ b/results.tex
@@ -1,7 +1,7 @@
 \subsection{Experimental Testbed}
 In this section, we employ RambutanAcc to study the impact of various code optimizations at different hardware levels of a GPU cluster.
 Since an application generally benefits from only a subset of these optimizations, we need more than one application.
-To this end, we take four benchmarks commonly used in science and engineering: sparse cholesky factorization, a machine learning based face recognition code, 2.5D Cannon's Matrix Multiplication, and a 3D Stencil.
+To this end, we take four benchmarks commonly used in science and engineering: sparse cholesky factorization, a machine learning based face recognition code, 2.5D Cannon's Matrix Multiplication, and 3D Stencil.
 When studying optimizations on a single GPU, to have apples-to-apples comparisons we always use our own CUDA kernels instead of 3rd party implementations (e.g. cuSPARSE). 
 In particular, for Sparse Cholesky Factorization, we develop our own CUDA kernels for $C = \alpha* A * B + \beta C$ where either A, B, and C are all in the {\em sparse} form or A is dense and B and C are sparse.
 In these kernels, we perform many optimization techniques such as memory coalescing and spatial tiling.
@@ -12,12 +12,17 @@ For example, in  2.5D Cannon we use the cuBLAS's {\em dgemm} and {\em daxpy} imp
 For node level optimizations (on single and multiple GPUs of the same compute node), we use up to three K80 GPUs.
 A K80 GPU pairs two GPU devices each having 2496 CUDA cores organized into 13 SMs.
 The whole K80-based system is equipped with 24GB DRAM with up to 480 GB/s memory bandwidth.
-For cluster level optimizations, we run code on K20 GPUs on Titan.
+For cluster level optimizations, we run code on K20x GPUs on Titan, each is about a half of K80 in terms of core count and memory bandwidth.
 We use the nvcc compiler version 7.0 and sm\_35 capability for CUDA codes and the Intel compiler for codes running on the host.
+We also run a few experiments on P100 GPUs (the newest generation named Pascal).
+Each Pascal GPU consists of 3584 cores and supports 720 GB/s memory bandwidth.
+Nvcc 8.0 and sm\_60 are used for these experiments.
 We use GASNet for communication among GPUs. 
 
 
 \subsection{Scheduling tasks on SMs of a GPU}
+We first study the significance of optimizations at the GPU level using sparse cholesky factorization and the Viola-Jones face detection algorithm.
+For these studies we use a GPU of the Kepler K80 card.
 
 \subsubsection{Sparse Cholesky Factorization}
 Sparse Cholesky Factorization A= $LL^T$, where A is a sparse and symmetric positive-definite matrix,
@@ -26,26 +31,21 @@ Depending on the sparsity pattern of the input matrix, many sparse representatio
 In this paper we employ the CSC (Compressed Sparse Column) format. 
 The input matrix is organized as a list of "non-zero" tiles, each including lists of non-zero elements and their row and column indices.
 The factorization operation is comprised of three smaller kernels: {\em factor}, {\em solve}, and {\em update}.
-These computations on CSC tiles and their data dependencies can be represented by a DAG as shown in Fig.~\ref{fig:cholesky}. 
+These computations on CSC tiles and their data dependencies can be represented by a DAG as we previously showed in Fig.~\ref{fig:cholesky}. 
 For very sparse matrices, this DAG may consist of many small tasks.
-Thus, this is a perfect application to evaluate the benefit of the fine-grained task scheduling support of the runtime.
+Thus, this is a perfect application to evaluate the benefit of fine-grained task scheduling in increasing the accelerator throughput.
 We place data on the host's DRAM and execute {\em factor} and {\em solve} on the host's worker.
 The compute-intensive {\em update} kernel is executed on the GPU workers.
 {\em RambutanAcc} automatically streams data required by this kernel to the GPU's DRAM and streams the results back.
 
-\begin{figure}[htb]
-\centering
-\includegraphics[width=.3\textwidth]{figures/cholesky.pdf}
-\caption{Cholesky factorization DAG consisting of three types of tasks: F (Factor), S (Solve), U (update). Each task is associated with a partition of the input matrix called a {\em tile}. Arrows presesent data dependencies between tasks of different types or of the same task type but on different tiles.}
-\label{fig:cholesky}
-\end{figure}
-
-
-An interesting path to explore is the tradeoff between coarse and fine-grained scheduling policies.  
-For sparse cholesky, the matrix is represented by many small CSC tiles.\samW{the previous sentence repeats the one}
-Thus, even a small problem size can result in many tasks.
+%An interesting path to explore is the tradeoff between coarse and fine-grained scheduling policies.  
+%For sparse cholesky, the matrix is represented by many small CSC tiles.\samW{the previous sentence repeats the one}
+%Thus, even a small problem size can result in many tasks.
+We implement 2 code variants, which are just slightly different from each other.
+The first code variant implements the {\em Update} phase with {\em type-3} task to launch the sparse matrix multiply kernel on the whole GPU, and hence the name {\em CUDA Launch}.
+The other code variant is called {\em persistent kernel}, since it employs {\em type-2} task, which can be scheduled on a group of SMs by the persistent kernel. 
 Fig.~\ref{fig:coarseFine} shows results of sparse cholesky under two scheduling policies.
-It can be seen that fine-grained scheduling policy outperforms the coarse-grained one.
+It can be seen that {\em persistent kernel} outperforms the coarse-grained {\em CUDA Launch} policy.
 This can be explained as follows.
 Each CSC tile is very small (e.g. 32$\times$32), making it hard to map computations efficiently to many CUDA cores.
 Thus, it may not be posible to scale a task to all available SMs of a GPUs.
@@ -53,33 +53,35 @@ We observe that for many input matrices tasks run more efficiently after reducin
 Since there are many tasks that can be runnable at a time, the scheduler can keep all SMs busy at very small overhead.
 Fig~\ref{fig:nWorkers} shows the optimal number of workers on a K80 GPU for Sparse Cholesky Factorization when the degree of sparsity of the input matrix varies.
 If the sparse matrix is filled with many tasks we have more parallelism, allowing us to configure the GPUs with more workers.
+Note that we picked these 3 numbers to represent wide ranges of sparsity, and the actual number in practice may fall somewhere in these ranges. 
 
-The lesson learn from this study is that fine-grained scheduling can be very helpful if we have a DAG with many small tasks, which can not run well on the whole GPU-based system.
-This is an important observation since sparse representation is very common in practice.
-{\em RambutanAcc} runtime supports fine-grained task scheduling, a simple yet powerful solution to this problem.
-The programmer can obtain high compute throughput on GPUs without complicating the application algorithm.
 
 \begin{figure}[htb]
 \centering
-\begin{subfigure}{0.23\textwidth}
+\begin{subfigure}{0.25\textwidth}
 \includegraphics[width=\textwidth]{figures/choleskyScheResults.pdf}
-\caption{Tile size 32$\times$32}
+\caption{Since tile size is small (32$\times$32), co-scheduling tasks on the same GPU with the persistent kernel improves performance}
 \label{choleskySche}
 \end{subfigure}
-\begin{subfigure}{0.23\textwidth}
+\begin{subfigure}{0.222\textwidth}
 \includegraphics[width=\textwidth]{figures/nWorkers.pdf}
-\caption{The optimal number of workers/GPUs}
+\caption{If there is enough parallelism (matrix is filled with more non-zeros), increasing \#workers may increase performance}
 \label{fig:nWorkers}
 \end{subfigure}
-\caption{Coarse vs. fine-grained Scheduling\samW{note left vs. right;  for left, what is the sparsity???  where does the matrix come from???}}
+\caption{Left: the persistent kernel with 2 workers/GPU improves the performance. For this experiment, the matrix sparsities are low (under 30\%). Right: for matrices with higher degrees of sparsity, increasing the number of workers  may further improve the performance}
+%\samW{note left vs. right;  for left, what is the sparsity???  where does the matrix come from???}}
 \label{fig:coarseFine}
 \end{figure}
 
+The lesson learn from this study is that fine-grained scheduling can be very helpful if we have a DAG with many small tasks, which can not run well on the whole GPU-based system.
+The persistent kernel allows this capability at small programming cost.
+The programmer can obtain high compute throughput on GPUs without complicating the application algorithm.
+This is an important observation since sparse representation is very common in practice.
 
 \subsubsection{Viola-Jones Face Recognition}
-\samW{is there a citation for this code/algorithm}
+%\samW{is there a citation for this code/algorithm}
 We next study the impact of dynamic task scheduling in balancing the workload among SMs of a GPU.
-For this study we use the Viola-Jones face detection kernel, an important module in many applications such as security surveillance.
+For this study we use the Viola-Jones face detection kernel~\cite{facedetection1, facedetection2}, an important module in many applications such as security surveillance.
 The Viola-Jones face detection algorithm detects faces by scanning a regtangular window of pixels over the image where it looks for features of a human face. 
 If a window contains a significant number of these features, it is considered to be a face. 
 Since face size varies, the window is scaled a number of times and the scanning process is repeated. 
@@ -87,53 +89,17 @@ To reduce the number of features that each window needs to check, the window pas
 Early stages have fewer features to check and are easier to pass whereas later stages have more features and are more selective. 
 At each stage, the calculations of features are accumulated and, if this accumulated value does not pass the threshold, the stage is failed and the current window is considered to not contain a face. 
 
-For this application, it is straightforward to exploit parallelism among search windows.
-Each CUDA thread block is responsible for a fixed number of windows, which will be further distributed to threads within the thread block.
-We call this code variant {\em CUDA-Basic}.
-Since the number of instructions per window depends on the input, the impact of thread divergion is expected to be significant.
-Thus, we also employ a {\em CUDA-Static Warp Scheduling} version which allows 32 threads in a warp to share a window (and thus they perform the same number of instructions).
-Porting this code on RambutanAcc, we expect to improve the performance further by balancing the workload among these warps.
-Finally, we run a hand-optimized code variant, which embeds the task scheduler into the kernel code.
-This code has all the capabilities that RambutanAcc can, but at lower cost since the task scheduler is specialized and runs on the GPU.
 
 \begin{figure}[htb]
 \centering
 \includegraphics[width=0.35\textwidth]{figures/faceRecognition.pdf}
-\caption{Balance the face searching\samW{what is FPS?  I assume up is good... i.e. FPS is a throughput rather than time metric}}
+\caption{Although the warp scheduling implemetation boosts up performance of the face detection algorithm via eliminating thread divergence, there remains substantial load imbalance among warps. The persistent kernels allows tasks to be dynamically scheduled to workers. Within each worker, task's workload is further split dynamically to warps. The performance of the persistent kernel is very close to that of the hand optimized code}
+%Balance the face searching\samW{what is FPS?  I assume up is good... i.e. FPS is a throughput rather than time metric}}
 \label{faceRecognition}
 \end{figure}
 
-Fig.~\ref{faceRecognition} shows the performance of all code variants.
-{\em CUDA-Basic} performs poorly as expected.
-Under this straightforward strategy, only one or a few threads among 32 threads of the same warp reach to late stages while the rest stay idle.\samW{previous sentence is unclrear...  Are you saying the naive code has a thread divergence problem?}
-This explains why {\em CUDA-Static Warp Scheduling} improves the performance significantly.
-However, there remains significant load imbalance among warps.
-With RambutanAcc, windows are distributed to workers dynamically.
-Specifically, we configure the runtime with 26 workers (two workers per SM), each a CUDA thread block. 
-The scheduler running on the host keeps assigning blocks of windows to these workers.
-In order to hide the scheduling latency, we configure the task buffer of each worker with multiple slots.
-While the worker is processing the current window block, the scheduler can offload another block to the remaining slots.
-In this experiment, each block takes about 50$\mu$s to finish, whereas the offloading cost is around 10$\mu$s.
-Thus, configuring the task buffer with two slots is sufficient.
-Fig.~\ref{faceRecognition} shows that RambutanAcc speeds up {\em CUDA-Static Warp Scheduling} by 1.35$\times$.
-All the performance improvement can be attributed to the capability of balancing computationgs among SMs of the GPU.
-The {\em CUDA-Hand Optimized} version runs even faster.
-The additional performance improvement is due to reducing scheduling overhead by embedding the scheduler to the application source code.
-\samW{where did the CUDA versions of the code come from?  Did you write them all?  if not, cite source}
 
 
-\subsection{Scheduling tasks on GPUs of the same node}
-
-\subsubsection{3D Stencil}
-\samW{3D stencil is an ill-defined term... is this a 7-point, constant coefficient laplacian?  Are you doing a smoother with a RHS?  are you assuming periodic BCs?  or constant(node/vertex centerd) boundaries?}
-On multiple GPUs we pick {\em 3D Stencil}, an iterative solver for Laplace's equation in three dimensions.
-{\em 3D Stencil} iterates over a 3D mesh, updating data elements using values from six nearest neighbors.
-The DAG for this application is similar to that shown earlier in Fig.~\ref{fig:taskGraph}, except for the number of dimensions.
-In particular, each task is associated with a data partition with up to six ghost cells.
-A task can be run when the previous iteration on this data partition finishes and it pulls all the needed ghost cells from neighboring tasks.
-3D stencil is a memory bandwidth bound application. 
-Thus using GPUs can boost up the performance significantly.
-It is interesting to determine if {\em RambutanAcc} can improve the performance further by  hiding communication overheads.
 
 \begin{figure*}[htb]
 \begin{subfigure}[b]{0.47\textwidth}
@@ -148,24 +114,51 @@ It is interesting to determine if {\em RambutanAcc} can improve the performance 
 \label{stencil_single_node_summit}
 \caption{A compute node with 4 Pascal (P100) GPUs. GPUs \#1 and \#2, \#3 and \#4 are paired togethor via an NVlink interconnect.}
 \end{subfigure}
-\caption{Strong scaling study on single compute nodes. Problem size $512^3$.
+\caption{Strong scaling study of 7-point stencil on single compute nodes. Problem size $512^3$.
 %\samW{I suggest the x-axis be GPU devices (2,4,6).  It also makes sense for there to be a single device (no communication) data point.}
 }
 \end{figure*}
 
 
+We use a few code variants presented in \cite{facedetection_dws}.
+For this application, it is straightforward to exploit parallelism among search windows.
+Each CUDA thread block is responsible for a fixed number of windows, which will be further distributed to threads within the thread block.
+In this paper we call this code variant {\em CUDA-Basic}.
+Since the number of instructions per window depends on the input, the impact of thread divergence is expected to be significant.
+Thus, we also employ a {\em CUDA-Static Warp Scheduling} version which allows 32 threads in a warp to share a window (and thus they perform the same number of instructions).
+We then porting this code on RambutanAcc using {\em type-2}, hence we call it {\em persistent kernel}.
+We expect to improve the performance further by balancing the workload among these warps.
+Finally, we run a hand-optimized code variant previously developed in \cite{facedetection_dws}.
+This variant effectively embeds the task scheduler into the kernel code.
+This code has all the capabilities that RambutanAcc can, but at lower cost since the task scheduler is specialized and runs on the GPU.
 
+Fig.~\ref{faceRecognition} shows the performance of all code variants.
+{\em CUDA-Basic} performs poorly as expected.
+Under this straightforward strategy, a few threads reach to late stages while most of them finish early and start with a new window since there is no chance to detect a face in their current windows.
+Note that CUDA runtime runs 32 threads of a warp in lock steps, and activities on these diverged threads must be serialized. 
+%\samW{previous sentence is unclrear...  Are you saying the naive code has a thread divergence problem?}
+This explains why {\em CUDA-Static Warp Scheduling} improves the performance significantly.
+However, there remains significant load imbalance among warps.
+With RambutanAcc, windows are distributed to workers dynamically.
+Specifically, we configure the runtime with 26 workers (two workers per SM), each a CUDA thread block. 
+The scheduler running on the host keeps assigning blocks of windows to these workers.
+In order to hide the scheduling latency, we configure the task buffer of each worker with multiple slots.
+While the worker is processing the current window block, the scheduler can offload another block to the remaining slots.
+In this experiment, each block takes about 50$\mu$s to finish, whereas the offloading cost is around 10$\mu$s.
+Thus, configuring the task buffer with two slots is sufficient.
+Fig.~\ref{faceRecognition} shows that RambutanAcc speeds up {\em CUDA-Static Warp Scheduling} by 1.35$\times$.
+All the performance improvement can be attributed to the capability of balancing computationgs among SMs of the GPU.
+The {\em CUDA-Hand Optimized} version runs even faster.
+The additional performance improvement is due to reducing scheduling overhead by embedding the scheduler to the application source code.
+%\samW{where did the CUDA versions of the code come from?  Did you write them all?  if not, cite source}
 
-\subsubsection{2.5D Cannon Matrix Multiply}
-Although sparse representations are widely used in practice, dense matrix operations also have a significant share in many scientific and engineering areas.
-As a result, we employ a dense matrix multiplication operation $C = \alpha* A * B + \beta C$ to evaluate our runtime.
-This is a compute bound application, and the GPU architecture is very well suited for the computation. 
-There are many algorithms for the matrix multiply operation, and we use a well-known extension of the standard 2D Cannon's algorithm called {\em Communication Avoiding} or 2.5D Cannon~\cite{25Dcannon}. 
-Under the original 2D Cannon's algorithm, the available tasks are organized into a {\em T=PxP} mesh, partitioning each of the three matrices A, B, and C into blocks.
-These partitions are first aligned using a skewing operation.
-The algorithm then performs P computation steps accumulating the C partition using the rotated A and B partitions.
-The communication avoiding algorithm shown in Fig.~\ref{fig:25DCannon} replicates the input matrices by a factor of L using an additional task dimension.
-The algorithm broadcasts input data to layers in this dimension to compute the traditional Cannon with T/$\sqrt(L^3)$ steps then reduces the results back to the first layer.
+\begin{figure}[htb]
+\centering
+\includegraphics[width=.47\textwidth]{figures/taskGraph.pdf}
+\caption{A directed acyclic graph for a 2D stencil code (which shows the concepts of a 3D Stencil task graph). The graph partitions the data space and the iteration space. Data space is divided into parcels, and the color represents the ownership mapping function (tasks to data parcels).}
+%Tasks are fireable as soon as data dependencies are satisfied.}
+\label{fig:taskGraph}
+\end{figure}
 
 \begin{figure*}[htb]
 \centering
@@ -185,6 +178,36 @@ Task Id is a triple where the first two numbers represent the coordinates of a C
 Fig.~\ref{deps} shows two subsets of the graph to illustrate two types of data dependecies required to compute C.}
 \label{fig:25DCannon}
 \end{figure*}
+
+\subsection{Scheduling tasks on GPUs of the same node}
+
+
+
+\subsubsection{3D Stencil}
+%\samW{3D stencil is an ill-defined term... is this a 7-point, constant coefficient laplacian?  Are you doing a smoother with a RHS?  are you assuming periodic BCs?  or constant(node/vertex centerd) boundaries?}
+On multiple GPUs we pick {\em 3D Stencil}, an iterative solver for Laplace's equation in three dimensions.
+{\em 3D Stencil} iterates over a 3D mesh, updating data elements using values from six nearest neighbors.
+The DAG for this application is similar to that shown earlier in Fig.~\ref{fig:taskGraph}, except for the number of dimensions.
+In particular, each task is associated with a data partition with up to six ghost cells.
+A task can be run when the previous iteration on this data partition finishes and it pulls all the needed ghost cells from neighboring tasks.
+3D stencil is a memory bandwidth bound application. 
+Thus using GPUs can boost up the performance significantly.
+It is interesting to determine if {\em RambutanAcc} can improve the performance further by  hiding communication overheads.
+
+
+
+
+\subsubsection{2.5D Cannon Matrix Multiply}
+Although sparse representations are widely used in practice, dense matrix operations also have a significant share in many scientific and engineering areas.
+As a result, we employ a dense matrix multiplication operation $C = \alpha* A * B + \beta C$ to evaluate our runtime.
+This is a compute bound application, and the GPU architecture is very well suited for the computation. 
+There are many algorithms for the matrix multiply operation, and we use a well-known extension of the standard 2D Cannon's algorithm called {\em Communication Avoiding} or 2.5D Cannon~\cite{25Dcannon}. 
+Under the original 2D Cannon's algorithm, the available tasks are organized into a {\em T=PxP} mesh, partitioning each of the three matrices A, B, and C into blocks.
+These partitions are first aligned using a skewing operation.
+The algorithm then performs P computation steps accumulating the C partition using the rotated A and B partitions.
+The communication avoiding algorithm shown in Fig.~\ref{fig:25DCannon} replicates the input matrices by a factor of L using an additional task dimension.
+The algorithm broadcasts input data to layers in this dimension to compute the traditional Cannon with T/$\sqrt(L^3)$ steps then reduces the results back to the first layer.
+
 
 
 \begin{figure}[htb]
