--- a/intro.tex
+++ b/intro.tex
@@ -46,7 +46,7 @@ We hope this result will encourage further research to develop and tune sparse k
 
 The contributions of the paper are three-fold.
 \begin{itemize}
-\item A task-based programming model that can reveal a sinificant amount of dynamic parallelism in an application
+\item A task-based programming model that can reveal a significant amount of dynamic parallelism in an application
 \item A runtime system that supports a rich set of task scheduling and communication handling policies for learning the impact of various optimizations on the performance
 \item A thorough experimental study using 4 HPC benchmarks 
 \end{itemize}
