--- a/impl.tex
+++ b/impl.tex
@@ -66,7 +66,7 @@ The process of writing data back is similar to the fetching process, and it is a
 When the hardware supports direct communication among accelerators (e.g. via shared PCIe, NVlink, RDMA among accelerators), the communication handler can be configured to communicate data on the direct path.
 Fig.~\ref{fig:handler_direct} shows that the communication process has been simplified significantly if direct communication is available.
 Indeed, the data owner process just needs to respond to parcel requests with the address of the parcel.
-Specifically, within a compute node if peer access among accelerators is enabled via a PCIe bus or NVLink connection, GASNet processes exchange information about a shared memory segment at the beginning of the program. Thus, they just need to transfer an offset of the parcel, which allows the recepient to pull data directly.
+Specifically, within a compute node if peer access among accelerators is enabled via a PCIe bus or NVLink connection, GASNet processes exchange information about a shared memory segment at the beginning of the program. Thus, they just need to transfer an offset of the parcel, which allows the recipient to pull data directly.
 In the case accelerators locate on different compute nodes, parcels can still by pass the hosts using RDMA.
 Specifically, data can be transferred to the NIC without being staged to host memory.
 The RDMA support in RambutanAcc is still under development though (using MPICH as the communication backend).
@@ -82,7 +82,7 @@ To keep workers busy, the scheduler frequently checks the runnable task queue an
 However, the task scheduler may not be very responsive since the communication handlers also run on the same processor core.
 Thus, each worker has a task buffer with a few slots.
 The scheduler fills up these slots while the workers keep popping tasks and executing.
-To reduce synchronization overheads we use a lock-free implementation for this single producer-multiple consumers scheme.
+To reduce synchronization overheads, we use a lock-free implementation for this single producer-multiple consumers scheme.
 
 \subsubsection{Acc worker using CUDA persistent kernel}
 Since the host worker implementation is simple, we now present the implementation of accelerator workers on GPUs.
@@ -106,7 +106,7 @@ The alive thread blocks are divided into workers to execute tasks.}
 
 Now each thread block knows which worker it belongs to and where to find tasks to execute.
 Once there are ready tasks and an available worker slot, the scheduler offloads corresponding function and arguments to task buffers on the GPUs.
-Then the scheduler picks a worker and notifies it by writing a signal to the GPU using the nonblocking copy {\em cudaMemcpyCpyAsync}.
+Then the scheduler picks a worker and notifies it by writing a signal to the GPU using the non-blocking copy {\em cudaMemcpyCpyAsync}.
 If the worker is busy at the time, it will read the signal  and execute the corresponding task later.
 Once the task finishes, the worker notifies the scheduler.
 Since a CUDA kernel cannot send data to the host, we have to use UVM (unified virtual memory).
